--- a/Client/index.html
+++ b/Client/index.html
@@ -9,6 +9,6 @@
     <h2>Hello Ms.</h2>
     <h1>Welcome to Our Website</h1>
 
-    <button>Visit Here</button>
+    <button>Submit</button>
 </body>
 </html>
